TGR-976: Zion-assignments can now contain any string